# git-snap-fs

./: Cargo.toml  README.md  clippy.toml  codex_prompt.txt  codex_spec.md
src/: fs.rs  inode.rs  lib.rs  main.rs  repo.rs  upgrade.rs
