[package]
name = "gitsnapfs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["GitSnapFS Contributors"]
description = "Read-only FUSE filesystem exposing Git repository snapshots."
repository = "https://github.com/matthiasgoergens/git-snap-fs"
keywords = ["fuse", "git", "filesystem"]
categories = ["filesystem", "development-tools::debugging", "version-control"]

[dependencies]
anyhow = "1.0"
bitflags = "2.6"
clap = { version = "4.5", features = ["derive"] }
fuse-backend-rs = { version = "0.13.1", default-features = false, features = ["fusedev"] }
gix = "0.74"
libc = "0.2"
nix = { version = "0.28", default-features = false, features = ["fs", "sched", "signal", "process"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
